--- a/src/components/introduction/Intro.css
+++ b/src/components/introduction/Intro.css
@@ -11,12 +11,13 @@
     justify-content: center;
 }
 
-.i-right{
+.i-right {
     flex: 1;
+    position: relative;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
+    align-items: center;
+  }
 
 .i-left-wrapper{
     padding: 50px;
@@ -57,10 +58,36 @@
     height: 50px;
     font-size: 30px;
     font-weight: bold;
-    color: green; 
+    color: lightseagreen; 
     display: flex;
     align-items: center;
 }
 
+.i-scroll {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: 20px;
+  }
+  
+  .i-img {
+    width: 40%;
+    height: 40%;
+    object-fit: cover;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+  }
 
+.i-bg{
+    clip-path: circle(50% at 50% 50%);
+    background-color:white;
+    width: 60%;
+    height: 60%;
+    position: absolute;
+    top: 10;
+    right: 10;
+    /* justify-content: center;
+    align-items: center; */
+}
 
