--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -21,4 +21,64 @@
 
 .c-right{
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.c-title{
+    font-size: 60px;
+    width: 80%
+}
+
+.c-info-item{
+    display: flex;
+    align-items: center;
+    margin: 50px 0px;
+    font-weight: 300;
+    width: 70%;
+}
+
+.c-icon{
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+}
+
+.c-desc{
+    font-weight: 300;
+}
+
+form{
+    margin-top: 20px;
+}
+
+input{
+    width: 50%;
+    height: 50px;
+    border: none;
+    border-bottom:1px solid black;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+textarea{
+    width: 100%;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+button{
+    border: none;
+    padding: 15px;
+    background-color: lightseagreen;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.success{
+    padding: 5px;
 }
