--- a/src/components/introduction/Intro.css
+++ b/src/components/introduction/Intro.css
@@ -91,3 +91,33 @@
     align-items: center; */
 }
 
+@media screen and (max-width: 480px) {
+    .i {
+      flex-direction: column;
+      padding: 5px;
+      width: 225%;
+    }
+  
+    .i-left-wrapper {
+    
+      padding: 10px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100%;
+      width: 100%;
+    }
+    .i-title-item{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 3px;
+    }
+    .i-description{
+        padding: 15px;
+    }
+    .i-right{
+        padding: 10px;
+    }
+  }
+
