--- a/src/components/TechCard/TechCard.css
+++ b/src/components/TechCard/TechCard.css
@@ -51,3 +51,10 @@
 .t:hover .t-img{
 transform: translateY(-20%)
 }
+
+@media screen and (max-width: 480px) {
+    .t {
+      width: 38%;
+      height: 10%;
+    }
+  }
